# sandbox-content-traceability

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  biome.json  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  sandbox-ai-traceability.code-workspace  taplo.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
audio/commands/gen_audioseal/: config.yaml  mise.toml  pyproject.toml
audio/commands/gen_audioseal/gen_audioseal/: benchmark.py  decode.py  encode.py
audio/commands/gen_audioseal/gen_audioseal/scenario/: mp3_loop.py  pitch_stretch.py  single_pass.py  trim.py  volume.py
audio/commands/gen_audioseal/gen_audioseal/watermark/: decode.py  encode.py
audio/commands/gen_silentcipher/: README.md  config.yaml  pyproject.toml
audio/commands/gen_silentcipher/gen_silentcipher/: benchmark.py  decode.py  encode.py
audio/commands/gen_silentcipher/gen_silentcipher/scenario/: mp3_loop.py  pitch_stretch.py  single_pass.py  trim.py  volume.py
audio/commands/gen_silentcipher/gen_silentcipher/watermark/: decode.py  encode.py
common/: mise.toml  parity.py  parse_body.py  pyproject.toml
common/common/: __init__.py  audio.py  body.py  ffmpeg.py  parity.py  paths.py
specifications/: command.md
viewer/: README.md  mise.toml  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.integrity.config.ts
viewer/server/: benchmark-api-plugin.test.ts  benchmark-api-plugin.ts  jsonl.test.ts  jsonl.ts  manifest.test.ts  manifest.ts  safe-path.test.ts  safe-path.ts  serve-file.ts
viewer/src/: App.tsx  (+2 more)
(+59 files in other folders)
